Prod prow config and jobs (#27)
* Change gcs buckets and gcr to use aspenmesh robot project

* Update Prow (via bump.sh --auto)

* Uptake upstream changes

* Add setup a prod prow instructions and scripts minus secret files

* Add step to create secret rel-pipeline-docker-config

* Add instructions for release builder process

* Change prow config and plugins for prod-prow

* Use quay.io as DOCKER_HUB

--- a/prow/cluster/aspenmesh/deck_rbac.yaml
+++ b/prow/cluster/aspenmesh/deck_rbac.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  labels:
+    app.kubernetes.io/part-of: prow
   namespace: default
-  annotations:
-    iam.gke.io/gcp-service-account: control-plane@k8s-prow.iam.gserviceaccount.com
-  name: deck
+  name: "deck"
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   namespace: default
-  name: deck
+  name: "deck"
 rules:
   - apiGroups:
       - "prow.k8s.io"
@@ -19,15 +19,16 @@ rules:
     verbs:
       - get
       - list
-      - watch
       # Required when deck runs with `--rerun-creates-job=true`
       - create
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  labels:
+    app.kubernetes.io/part-of: prow
   namespace: test-pods
-  name: deck
+  name: "deck"
 rules:
   - apiGroups:
       - ""
@@ -39,26 +40,30 @@ rules:
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  labels:
+    app.kubernetes.io/part-of: prow
   namespace: default
-  name: deck
+  name: "deck"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: deck
+  name: "deck"
 subjects:
 - kind: ServiceAccount
-  name: deck
+  name: "deck"
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  labels:
+    app.kubernetes.io/part-of: prow
   namespace: test-pods
-  name: deck
+  name: "deck"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: deck
+  name: "deck"
 subjects:
 - kind: ServiceAccount
-  name: deck
+  name: "deck"
   namespace: default
