--- a/prow/cluster/aspenmesh/cherrypicker_deployment.yaml
+++ b/prow/cluster/aspenmesh/cherrypicker_deployment.yaml
@@ -19,11 +19,12 @@ spec:
       terminationGracePeriodSeconds: 180
       containers:
       - name: cherrypicker
-        image: gcr.io/k8s-prow/cherrypicker:v20200427-baaf248ed
+        image: gcr.io/k8s-prow/cherrypicker:v20200518-8da074ad4
         args:
         - --dry-run=false
         - --use-prow-assignments=false
         - "--labels=cla: yes"
+        - --create-issue-on-conflict
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
         ports:
