--- a/prow/cluster/aspenmesh/crier_rbac.yaml
+++ b/prow/cluster/aspenmesh/crier_rbac.yaml
@@ -1,81 +1,40 @@
-# Copyright 2019 The Kubernetes Authors All rights reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 ---
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  annotations:
-    iam.gke.io/gcp-service-account: control-plane@k8s-prow.iam.gserviceaccount.com
-  name: crier
-  namespace: default
+  labels:
+    app.kubernetes.io/part-of: prow
+  name: "crier"
 ---
-kind: Role
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  namespace: default
+  labels:
+    app.kubernetes.io/part-of: prow
   name: crier
 rules:
 - apiGroups:
-    - "prow.k8s.io"
+  - "prow.k8s.io"
   resources:
-    - "prowjobs"
+  - "prowjobs"
   verbs:
-    - "get"
-    - "watch"
-    - "list"
-    - "patch"
+  - "get"
+  - "watch"
+  - "list"
+  - "patch"
 ---
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  namespace: test-pods
-  name: crier
-rules:
-- apiGroups:
-    - ""
-  resources:
-    - "pods"
-    - "events"
-  verbs:
-    - "get"
-    - "list"
----
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: crier-namespaced
-  namespace: default
+  labels:
+    app.kubernetes.io/part-of: prow
+  name: "crier"
+  namespace: "default"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: crier
+  kind: ClusterRole
+  name: "crier"
 subjects:
 - kind: ServiceAccount
-  name: crier
-  namespace: default
----
-kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: crier-namespaced
-  namespace: test-pods
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: crier
-subjects:
-- kind: ServiceAccount
-  name: crier
-  namespace: default
+  name: "crier"
+  namespace: "default"
