--- a/prow/cluster/aspenmesh/hook_deployment.yaml
+++ b/prow/cluster/aspenmesh/hook_deployment.yaml
@@ -22,7 +22,7 @@ spec:
       terminationGracePeriodSeconds: 180
       containers:
       - name: hook
-        image: gcr.io/k8s-prow/hook:v20200427-baaf248ed
+        image: gcr.io/k8s-prow/hook:v20200518-8da074ad4
         args:
         - --config-path=/etc/config/config.yaml
         - --dry-run=false
@@ -30,6 +30,7 @@ spec:
         - --slack-token-file=/etc/slack/token
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
+        - --github-token-path=/etc/github/oauth
         ports:
           - name: http
             containerPort: 8888
