--- a/prow/cluster/aspenmesh/hook_rbac.yaml
+++ b/prow/cluster/aspenmesh/hook_rbac.yaml
@@ -1,12 +1,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  labels:
+    app.kubernetes.io/part-of: prow
   namespace: default
   name: "hook"
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  labels:
+    app.kubernetes.io/part-of: prow
   namespace: default
   name: "hook"
 rules:
@@ -17,8 +21,6 @@ rules:
     verbs:
       - create
       - get
-      - list
-      - update
   - apiGroups:
       - ""
     resources:
@@ -31,6 +33,8 @@ rules:
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  labels:
+    app.kubernetes.io/part-of: prow
   namespace: default
   name: "hook"
 roleRef:
