--- a/prow/cluster/aspenmesh/tide_deployment.yaml
+++ b/prow/cluster/aspenmesh/tide_deployment.yaml
@@ -14,13 +14,14 @@ spec:
     spec:
       containers:
       - name: tide
-        image: gcr.io/k8s-prow/tide:v20200427-baaf248ed
+        image: gcr.io/k8s-prow/tide:v20200518-8da074ad4
         args:
         - --config-path=/etc/config/config.yaml
         - --dry-run=false
         - --gcs-credentials-file=/etc/service-account/service-account.json
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
+        - --github-token-path=/etc/github/oauth
         - --history-uri=gs://istio-prow/tide-history.json
         - --job-config-path=/etc/job-config
         - --status-path=gs://istio-prow/tide-status-checkpoint.yaml
