--- a/prow/cluster/jobs/aspenmesh/istio/istio.istio.release-1.4.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/istio/istio.istio.release-1.4.gen.yaml
@@ -78,9 +78,9 @@ postsubmits:
         - prow/release-commit.sh
         env:
         - name: DOCKER_HUB
-          value: gcr.io/prow-cicd
+          value: gcr.io/am-prow-cicd
         - name: GCS_BUCKET
-          value: am-istio-prow/dev
+          value: am-istio/dev
         image: gcr.io/istio-testing/build-tools:release-1.4-2020-02-14T15-30-45
         name: ""
         resources:
