--- a/prow/cluster/jobs/aspenmesh/istio/istio.istio.release-1.5.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/istio/istio.istio.release-1.5.gen.yaml
@@ -20,9 +20,9 @@ postsubmits:
         - prow/release-commit.sh
         env:
         - name: DOCKER_HUB
-          value: gcr.io/prow-cicd
+          value: gcr.io/am-prow-cicd
         - name: GCS_BUCKET
-          value: am-istio-prow/dev        
+          value: am-istio/dev        
         image: gcr.io/istio-testing/build-tools:release-1.5-2020-03-24T16-54-03
         name: ""
         resources:
