--- a/prow/cluster/jobs/aspenmesh/istio/istio.istio.release-1.6.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/istio/istio.istio.release-1.6.gen.yaml
@@ -114,9 +114,9 @@ postsubmits:
         - prow/release-commit.sh
         env:
         - name: DOCKER_HUB
-          value: gcr.io/prow-cicd
+          value: gcr.io/am-prow-cicd
         - name: GCS_BUCKET
-          value: am-istio-prow/dev        
+          value: am-istio/dev        
         image: gcr.io/istio-testing/build-tools:master-2020-04-28T21-48-12
         name: ""
         resources:
